--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <head class="head">
+    <header class="header">
         <div class="container">
             <nav class="navigation">
-                <a href=""><img src="img/nav-logo.png" alt=""></a>
+                <a class="nav-logo" href="index.html">Web
+                    <span>
+                        Studio
+                    </span>
+                </a>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="">Студія</a>
+                        <a href="index.html">Студія</a>
                     </li>
                     <li class="nav-item">
                         <a href="">Портфоліо</a>
@@ -28,17 +31,17 @@
                         <a href="">Контакти</a>
                     </li>
                 </ul>
-                <div class="nav-wrap">
-                    <a class="wrap-link" href="">
-                        info@devstudio.com
-                    </a>
-                    <h2 class="nav-contact">
-                        +38 096 111 11 11
-                    </h2>
-                </div>
             </nav>
+            <div class="nav-wrap">
+                <a class="wrap-link" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+                <a href="tel:+380961111111">
+                    +38 096 111 11 11
+                </a>
+            </div>
         </div>
-    </head>
+    </header>
 </body>
 
 </html>
