--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header class="header">
         <div class="container">
             <nav class="navigation">
+                <div class="list-wrap">
                 <a class="nav-logo" href="index.html">Web
                     <span>
                         Studio
@@ -31,6 +32,7 @@
                         <a href="">Контакти</a>
                     </li>
                 </ul>
+            </div>
             </nav>
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
@@ -40,7 +42,6 @@
                     +38 096 111 11 11
                 </a>
             </div>
-        </div>
     </header>
 </body>
 
