--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
             <nav class="navigation">
                 <div class="list-wrap">
-                <a class="nav-logo" href="index.html">Web
-                    <span>
-                        Studio
-                    </span>
-                </a>
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="index.html">Студія</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="">Портфоліо</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="">Контакти</a>
-                    </li>
-                </ul>
-            </div>
+                    <a class="nav-logo" href="index.html">Web
+                        <span>
+                            Studio
+                        </span>
+                    </a>
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="index.html">Студія</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="">Портфоліо</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="">Контакти</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
@@ -41,8 +42,73 @@
                 <a href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
+                <img class="nav-img" src="img/pointers.png" alt="">
             </div>
     </header>
+    <main>
+        <section class="presentation">
+            <div class="container">
+                <h1 class="presentation-title">
+                    Ефективні рішення для <br> вашого бізнесу
+                </h1>
+                <button class="presentation-button">
+                    Замовити послугу
+                </button>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="container">
+                <ul class="main-section-list">
+                    <li class="main-section-item">
+                        <h2 class="main-section-title">
+                            УВАГА ДО ДЕТАЛЕЙ
+                        </h2>
+                        <p class="main-section-text">
+                            Ідейні міркування, і навіть початок <br> повсякденної роботи з формування <br> позиції.
+                        </p>
+                    </li>
+                    <li class="main-section">
+                        <h2 class="main-section-title">
+                            ПУНКТУАЛЬНІСТЬ
+                        </h2>
+                        <p class="main-section-text">
+                            Завдання організації, особливо рамки <br> і місце навчання кадрів тягне у себе.
+                        </p>
+                    </li>
+                    <li class="main-section">
+                        <h2 class="main-section-title">
+                            ПЛАНУВАННЯ
+                        </h2>
+                        <p class="main-section-text">
+                            Так само консультація з широким <br> активом значною мірою зумовлює.
+                        </p>
+                    </li>
+                    <li class="main-section">
+                        <h2 class="main-section-title">
+                            СУЧАСНІ ТЕХНОЛОГІЇ
+                        </h2>
+                        <p class="main-section-text">
+                            Значимість цих проблем настільки <br> очевидна, що реалізація планових <br> завдань.
+                        </p>
+                    </li>
+                </ul>
+                <h3 class="main-section-title-img">
+                    Чим ми займаємося
+                </h3>
+                <ul class="main-section-img-list">
+                    <li class="main-section-img-item">
+                        <img class="main-section-img-" src="./img/fisrt-tablet.png" alt="">
+                    </li>
+                    <li class="main-section-img-item">
+                        <img class="main-section-img-" src="./img/second-tablet.png" alt="">
+                    </li>
+                    <li class="main-section-img-item">
+                        <img class="main-section-img-" src="./img/last-tablet.png" alt="">
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
