--- a/index.html
+++ b/index.html
@@ -56,54 +56,59 @@
                 </button>
             </div>
         </section>
-        <section class="main-section">
+        <section class="benefice">
             <div class="container">
-                <ul class="main-section-list">
-                    <li class="main-section-item">
-                        <h2 class="main-section-title">
+                <ul class="benefice-list">
+                    <li class="benefice-item">
+                        <h2 class="benefice-title">
                             УВАГА ДО ДЕТАЛЕЙ
                         </h2>
-                        <p class="main-section-text">
+                        <p class="benefice--text">
                             Ідейні міркування, і навіть початок <br> повсякденної роботи з формування <br> позиції.
                         </p>
                     </li>
-                    <li class="main-section">
-                        <h2 class="main-section-title">
+                    <li class="benefice-item">
+                        <h2 class="-title">
                             ПУНКТУАЛЬНІСТЬ
                         </h2>
-                        <p class="main-section-text">
+                        <p class="benefice-text">
                             Завдання організації, особливо рамки <br> і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
-                    <li class="main-section">
-                        <h2 class="main-section-title">
+                    <li class="benefice-item">
+                        <h2 class="benefice-title">
                             ПЛАНУВАННЯ
                         </h2>
-                        <p class="main-section-text">
+                        <p class="benefice-text">
                             Так само консультація з широким <br> активом значною мірою зумовлює.
                         </p>
                     </li>
-                    <li class="main-section">
-                        <h2 class="main-section-title">
+                    <li class="benefice-item">
+                        <h2 class="benefice-title">
                             СУЧАСНІ ТЕХНОЛОГІЇ
                         </h2>
-                        <p class="main-section-text">
+                        <p class="benefice-text">
                             Значимість цих проблем настільки <br> очевидна, що реалізація планових <br> завдань.
                         </p>
                     </li>
                 </ul>
-                <h3 class="main-section-title-img">
+
+            </div>
+        </section>
+        <section class="work">
+            <div class="container">
+                <h2 class="work-title">
                     Чим ми займаємося
-                </h3>
-                <ul class="main-section-img-list">
-                    <li class="main-section-img-item">
-                        <img class="main-section-img-" src="./img/fisrt-tablet.png" alt="">
+                </h2>
+                <ul class="work-list">
+                    <li class="work-item">
+                        <img class="work-img" src="./img/fisrt-tablet.png" alt="">
                     </li>
-                    <li class="main-section-img-item">
-                        <img class="main-section-img-" src="./img/second-tablet.png" alt="">
+                    <li class="work-item">
+                        <img class="work-img" src="./img/second-tablet.png" alt="">
                     </li>
-                    <li class="main-section-img-item">
-                        <img class="main-section-img-" src="./img/last-tablet.png" alt="">
+                    <li class="work-item">
+                        <img class="work-img" src="./img/last-tablet.png" alt="">
                     </li>
                 </ul>
             </div>
