--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="wrap-link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
-                <a href="tel:+380961111111">
+                <a class="wrap-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
                 <img class="nav-img" src="img/pointers.png" alt="">
@@ -113,7 +113,84 @@
                 </ul>
             </div>
         </section>
+        <section class="team">
+            <div class="container">
+                <h2 class="team-title">
+                    Наша команда
+                </h2>
+                <ul class="team-list">
+                    <li class="team-img">
+                        <img src="./img/first-worker.jpg" alt="">
+                        <div class="list-wrap">
+                            <h3 class="team-subtitle">
+                                Ігор Дем'яненко
+                            </h3>
+                            <span class="list-word">
+                                Product Designer
+                            </span>
+                        </div>
+                    </li>
+                    <li class="team-img">
+                        <img src="./img/second-worker.jpg" alt="">
+                        <div class="list-wrap">
+                            <h3 class="team-subtitle">
+                                Ольга Рєпіна
+                            </h3>
+                            <span class="list-word">
+                                Frontend Developer
+                            </span>
+                        </div>
+                    </li>
+                    <li class="team-img">
+                        <img src="./img/third-worker.jpg" alt="">
+                        <div class="list-wrap">
+                            <h3 class="team-subtitle">
+                                Микола Тарасов
+                            </h3>
+                            <span class="list-word">
+                                Marketing
+                            </span>
+                        </div>
+                    </li>
+                    <li class="team-img">
+                        <img src="./img/last-worker.jpg" alt="">
+                        <div class="list-wrap">
+                            <h3 class="team-subtitle">
+                                Михайло Єрмаков
+                            </h3>
+                            <span class="list-word">
+                                UI Designer
+                            </span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
+    <footer class="foooter">
+        <a class="footer-logo" href="">Web
+<span class="footer-span">
+    studio
+</span>
+        </a>
+        <ul class="footer-list">
+            <li class="footer">
+                <a class="footer-link" href="">
+                    м. Київ, пр-т Лесі Українки, 26
+                </a>
+            </li>
+            <li class="footer">
+                <a class="footer-link" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="footer">
+                <a class="footer-link" href="tel:+380961111111">
+                    +38 096 111 11 11
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
