--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                 </li>
                 <li class="choose-item">
                     <button class="choose-btn">
-                        Веб-сайти 
+                        Веб-сайти
                     </button>
                 </li>
                 <li class="choose-item">
@@ -60,13 +60,115 @@
                 </li>
                 <li class="choose-item">
                     <button class="choose-btn">
-                        Дизайн 
+                        Дизайн
                     </button>
                 </li>
                 <li class="choose-item">
                     <button class="choose-btn">
                         Маркетинг
                     </button>
+                </li>
+            </ul>
+            <ul class="main-list">
+                <li class="main-item">
+                    <img class="main-img" src="./img/img1.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Технокряк
+                        </h3>
+                        <span class="main-word">
+                            Веб-сайт
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img2.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Постер New Orlean vs Golden Star
+                        </h3>
+                        <span class="main-word">
+                            Дизайн
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img3.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Ресторан Seafood
+                        </h3>
+                        <span class="main-word">
+                            Додаток
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img4.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Проєкт Prime
+                        </h3>
+                        <span class="main-word">
+                            Маркетинг 
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img5.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Проєкт Boxes
+                        </h3>
+                        <span class="main-word">
+                            Додаток
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img6.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Inspiration has no Borders
+                        </h3>
+                        <span class="main-word">
+                            Веб-сайт 
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img7.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Видання Limited Edition
+                        </h3>
+                        <span class="main-word">
+                            Дизайн
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img8.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Проєкт LAB
+
+                        </h3>
+                        <span class="main-word">
+                            Маркетинг
+                        </span>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <img class="main-img" src="./img/img9.png" alt="">
+                    <div class="main-wrap">
+                        <h3 class="main-subtitle">
+                            Growing Business
+                        </h3>
+                        <span class="main-word">
+                            Додаток 
+                        </span>
+                    </div>
                 </li>
             </ul>
         </div>
