--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
                 <a class="wrap-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
-                <img class="nav-img" src="img/pointers.png" alt="">
+                <div class="pointer">
+
+                </div>
+                <div class="pointer">
+
+                </div>
             </div>
     </header>
     <main>
