--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-wrap">
             <nav class="navigation">
                 <div class="list-wrap">
                     <a class="nav-logo" href="index.html">Web
@@ -29,13 +29,13 @@
                     </a>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="index.html">Студія</a>
+                            <a class="nav-link"  href="index.html">Студія</a>
                         </li>
                         <li class="nav-item">
-                            <a href="">Портфоліо</a>
+                            <a class="nav-link" href="portfolio.html">Портфоліо</a>
                         </li>
                         <li class="nav-item">
-                            <a href="">Контакти</a>
+                            <a class="nav-link" href="">Контакти</a>
                         </li>
                     </ul>
                 </div>
