--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         <div class="container header-wrap">
             <nav class="navigation">
                 <div class="list-wrap">
-                    <a class="nav-logo" href="index.html">Web
-                        <span class="nav-word">
-                            Studio
-                        </span>
+                    <a class="nav-logo" href="index.html">Web<span class="nav-word">Studio</span>
                     </a>
                     <ul class="nav-list">
                         <li class="nav-item">
