--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a class="nav-link"  href="index.html">Студія</a>
+                            <a class="nav-link" href="index.html">Студія</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Портфоліо</a>
@@ -59,7 +59,7 @@
                     Ефективні рішення для <br> вашого бізнесу
                 </h1>
                 <button class="presentation-button">
-                    Замовити послугу
+                    <a class="button-link" href="">Замовити послугу</a>
                 </button>
             </div>
         </section>
@@ -70,7 +70,7 @@
                         <h2 class="benefice-title">
                             УВАГА ДО ДЕТАЛЕЙ
                         </h2>
-                        <p class="benefice--text">
+                        <p class="benefice-text">
                             Ідейні міркування, і навіть початок <br> повсякденної роботи з формування <br> позиції.
                         </p>
                     </li>
