--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                 <h1 class="presentation-title">
                     Ефективні рішення для <br> вашого бізнесу
                 </h1>
+                <div class="presentation-wrap">
                 <button class="presentation-button">
-                    <a class="button-link" href="">Замовити послугу</a>
+                    Замовити послугу
                 </button>
+            </div>
             </div>
         </section>
         <section class="benefice">
@@ -75,7 +77,7 @@
                         </p>
                     </li>
                     <li class="benefice-item">
-                        <h2 class="-title">
+                        <h2 class="benefice-title">
                             ПУНКТУАЛЬНІСТЬ
                         </h2>
                         <p class="benefice-text">
