--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     Наша команда
                 </h2>
                 <ul class="team-list">
-                    <li class="team-img">
-                        <img src="./img/first-worker.jpg" alt="">
+                    <li class="team-item">
+                        <img class="team-img"  src="./img/first-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Ігор Дем'яненко
@@ -139,8 +139,8 @@
                             </span>
                         </div>
                     </li>
-                    <li class="team-img">
-                        <img src="./img/second-worker.jpg" alt="">
+                    <li class="team-item">
+                        <img class="team-img" src="./img/second-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Ольга Рєпіна
@@ -150,8 +150,8 @@
                             </span>
                         </div>
                     </li>
-                    <li class="team-img">
-                        <img src="./img/third-worker.jpg" alt="">
+                    <li class="team-item">
+                        <img class="team-img"  src="./img/third-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Микола Тарасов
@@ -161,8 +161,8 @@
                             </span>
                         </div>
                     </li>
-                    <li class="team-img">
-                        <img src="./img/last-worker.jpg" alt="">
+                    <li class="team-item">
+                        <img class="team-img"  src="./img/last-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Михайло Єрмаков
