--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <h3 class="team-subtitle">
                                 Ігор Дем'яненко
                             </h3>
-                            <span class="list-word">
+                            <span class="display:block">
                                 Product Designer
                             </span>
                         </div>
@@ -145,7 +145,7 @@
                             <h3 class="team-subtitle">
                                 Ольга Рєпіна
                             </h3>
-                            <span class="list-word">
+                            <span class="display:block">
                                 Frontend Developer
                             </span>
                         </div>
@@ -156,7 +156,7 @@
                             <h3 class="team-subtitle">
                                 Микола Тарасов
                             </h3>
-                            <span class="list-word">
+                            <span class="display:block">
                                 Marketing
                             </span>
                         </div>
@@ -167,7 +167,7 @@
                             <h3 class="team-subtitle">
                                 Михайло Єрмаков
                             </h3>
-                            <span class="list-word">
+                            <span class="display:block">
                                 UI Designer
                             </span>
                         </div>
