--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     Ефективні рішення для <br> вашого бізнесу
                 </h1>
                 <div class="presentation-wrap">
-                <button class="presentation-button">
-                    Замовити послугу
-                </button>
-            </div>
+                    <button class="presentation-button">
+                        Замовити послугу
+                    </button>
+                </div>
             </div>
         </section>
         <section class="benefice">
@@ -129,12 +129,12 @@
                 </h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img class="team-img"  src="./img/first-worker.jpg" alt="">
+                        <img class="team-img" src="./img/first-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Ігор Дем'яненко
                             </h3>
-                            <span class="display:block">
+                            <span class="team-position">
                                 Product Designer
                             </span>
                         </div>
@@ -145,29 +145,29 @@
                             <h3 class="team-subtitle">
                                 Ольга Рєпіна
                             </h3>
-                            <span class="display:block">
+                            <span class="team-position">
                                 Frontend Developer
                             </span>
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-img"  src="./img/third-worker.jpg" alt="">
+                        <img class="team-img" src="./img/third-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Микола Тарасов
                             </h3>
-                            <span class="display:block">
+                            <span class="team-position">
                                 Marketing
                             </span>
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-img"  src="./img/last-worker.jpg" alt="">
+                        <img class="team-img" src="./img/last-worker.jpg" alt="">
                         <div class="list-wrap">
                             <h3 class="team-subtitle">
                                 Михайло Єрмаков
                             </h3>
-                            <span class="display:block">
+                            <span class="team-position">
                                 UI Designer
                             </span>
                         </div>
@@ -177,28 +177,27 @@
         </section>
     </main>
     <footer class="foooter">
-        <a class="footer-logo" href="">Web
-            <span class="footer-span">
-                studio
-            </span>
-        </a>
-        <ul class="footer-list">
-            <li class="footer">
-                <a class="footer-link" href="">
-                    м. Київ, пр-т Лесі Українки, 26
-                </a>
-            </li>
-            <li class="footer">
-                <a class="footer-link" href="mailto:info@devstudio.com">
-                    info@devstudio.com
-                </a>
-            </li>
-            <li class="footer">
-                <a class="footer-link" href="tel:+380961111111">
-                    +38 096 111 11 11
-                </a>
-            </li>
-        </ul>
+        <div class="container">
+            <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
+            </a>
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a class="footer-addres" href="">
+                        м. Київ, пр-т Лесі Українки, 26
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
