--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
                 <a class="wrap-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
-                <div class="pointer">
-
-                </div>
-                <div class="pointer">
-
-                </div>
+                    <img class="nav-img" src="./img/finger.png" alt="">
             </div>
     </header>
     <main>
