--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <a class="wrap-link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
-                    <img class="nav-img" src="./img/finger.png" alt="">
             </div>
     </header>
     <main>
@@ -125,7 +124,7 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img class="team-img" src="./img/first-worker.jpg" alt="">
-                        <div class="list-wrap">
+                        <div class="team-list-wrap">
                             <h3 class="team-subtitle">
                                 Ігор Дем'яненко
                             </h3>
@@ -136,7 +135,7 @@
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./img/second-worker.jpg" alt="">
-                        <div class="list-wrap">
+                        <div class="team-list-wrap">
                             <h3 class="team-subtitle">
                                 Ольга Рєпіна
                             </h3>
@@ -147,7 +146,7 @@
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./img/third-worker.jpg" alt="">
-                        <div class="list-wrap">
+                        <div class="team-list-wrap">
                             <h3 class="team-subtitle">
                                 Микола Тарасов
                             </h3>
@@ -158,7 +157,7 @@
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./img/last-worker.jpg" alt="">
-                        <div class="list-wrap">
+                        <div class="team-list-wrap">
                             <h3 class="team-subtitle">
                                 Михайло Єрмаков
                             </h3>
