--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,20 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-wrap">
             <nav class="navigation">
                 <div class="list-wrap">
-                    <a class="nav-logo" href="index.html">Web
-                        <span>
-                            Studio
-                        </span>
+                    <a class="nav-logo" href="index.html">Web<span class="nav-word">Studio</span>
                     </a>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="index.html">Студія</a>
+                            <a class="nav-link" href="index.html">Студія</a>
                         </li>
                         <li class="nav-item">
-                            <a href="portfolio.html">Портфоліо</a>
+                            <a class="nav-link" href="portfolio.html">Портфоліо</a>
                         </li>
                         <li class="nav-item">
-                            <a href="">Контакти</a>
+                            <a class="nav-link" href="">Контакти</a>
                         </li>
                     </ul>
                 </div>
@@ -50,6 +47,7 @@
             </div>
     </header>
     <main>
+        <section class="choose">
         <div class="container">
             <ul class="choose-list">
                 <li class="choose-item">
@@ -181,30 +179,30 @@
                 </li>
             </ul>
         </div>
+    </section>
     </main>
     <footer class="foooter">
-        <a class="footer-logo" href="">Web
-            <span class="footer-span">
-                studio
-            </span>
-        </a>
-        <ul class="footer-list">
-            <li class="footer">
-                <a class="footer-link" href="">
-                    м. Київ, пр-т Лесі Українки, 26
-                </a>
-            </li>
-            <li class="footer">
-                <a class="footer-link" href="mailto:info@devstudio.com">
-                    info@devstudio.com
-                </a>
-            </li>
-            <li class="footer">
-                <a class="footer-link" href="tel:+380961111111">
-                    +38 096 111 11 11
-                </a>
-            </li>
-        </ul>
+        <div class="container">
+            <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
+            </a>
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a class="footer-addres" href="">
+                        м. Київ, пр-т Лесі Українки, 26
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="footer-item">
+                    <a class="footer-link" href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
