--- a/index.html
+++ b/index.html
@@ -106,12 +106,15 @@
                 <ul class="work-list">
                     <li class="work-item">
                         <img class="work-img" src="./img/fisrt-tablet.png" alt="">
+                        <p class="work-text">Десктопні додатки</p>
                     </li>
                     <li class="work-item">
                         <img class="work-img" src="./img/second-tablet.png" alt="">
+                        <p class="work-text">Мобільні додатки</p>
                     </li>
                     <li class="work-item">
                         <img class="work-img" src="./img/last-tablet.png" alt="">
+                        <p class="work-text">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
