--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
             </nav>
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
+                    <svg class="nav-icon mail">
+                        <use href="./img/symbol-defs.svg#icon-e-mail"></use>
+                    </svg>
                     info@devstudio.com
                 </a>
                 <a class="wrap-link" href="tel:+380961111111">
+                    <svg class="nav-icon phone">
+                        <use href="./img/symbol-defs.svg#icon-phone"></use>
+                    </svg>
                     +38 096 111 11 11
                 </a>
             </div>
@@ -134,6 +140,28 @@
                             <span class="team-position">
                                 Product Designer
                             </span>
+                            <ul class="icon-list">
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -145,6 +173,28 @@
                             <span class="team-position">
                                 Frontend Developer
                             </span>
+                            <ul class="icon-list">
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -156,6 +206,28 @@
                             <span class="team-position">
                                 Marketing
                             </span>
+                            <ul class="icon-list">
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -167,6 +239,28 @@
                             <span class="team-position">
                                 UI Designer
                             </span>
+                            <ul class="icon-list">
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </li>
+                                <li class="item-icon">
+                                    <svg class="team-icon">
+                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
