--- a/index.html
+++ b/index.html
@@ -266,6 +266,45 @@
                 </ul>
             </div>
         </section>
+        <section class="clients">
+            <div class="container">
+                <h2 class="clients-title">
+                    Постійні клієнти
+                </h2>
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-one"></use>
+                        </svg>
+                    </li>
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-two"></use>
+                        </svg>
+                    </li>
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-three"></use>
+                        </svg>
+                    </li>
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-fourth"></use>
+                        </svg>
+                    </li>
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-five"></use>
+                        </svg>
+                    </li>
+                    <li class="clients-item">
+                        <svg class="clients-icon">
+                            <use href="./img/symbol-defs.svg#icon-clients-six"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="foooter">
         <div class="container">
