--- a/index.html
+++ b/index.html
@@ -307,26 +307,63 @@
         </section>
     </main>
     <footer class="foooter">
-        <div class="container">
-            <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
-            </a>
-            <ul class="footer-list">
-                <li class="footer-item">
-                    <a class="footer-addres" href="">
-                        м. Київ, пр-т Лесі Українки, 26
-                    </a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-link" href="mailto:info@devstudio.com">
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-link" href="tel:+380961111111">
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
+        <div class="container footer-box">
+            <div class="footer-address-wrap">
+                <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
+                </a>
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a class="footer-addres" href="">
+                            м. Київ, пр-т Лесі Українки, 26
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="mailto:info@devstudio.com">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="tel:+380961111111">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-wrap">
+                <h2 class="footer-title">
+                    приєднуйтесь
+                </h2>
+                <ul class="footer-wrap-list">
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
