--- a/portfolio.html
+++ b/portfolio.html
@@ -39,171 +39,229 @@
             </nav>
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
+                    <svg class="nav-icon mail">
+                        <use href="./img/symbol-defs.svg#icon-e-mail"></use>
+                    </svg>
                     info@devstudio.com
                 </a>
                 <a class="wrap-link" href="tel:+380961111111">
+                    <svg class="nav-icon phone">
+                        <use href="./img/symbol-defs.svg#icon-phone"></use>
+                    </svg>
                     +38 096 111 11 11
                 </a>
             </div>
     </header>
     <main>
         <section class="choose">
-        <div class="container">
-            <ul class="choose-list">
-                <li class="choose-item">
-                    <button class="choose-btn">
-                        Усі
-                    </button>
-                </li>
-                <li class="choose-item">
-                    <button class="choose-btn">
-                        Веб-сайти
-                    </button>
-                </li>
-                <li class="choose-item">
-                    <button class="choose-btn">
-                        Додатки
-                    </button>
-                </li>
-                <li class="choose-item">
-                    <button class="choose-btn">
-                        Дизайн
-                    </button>
-                </li>
-                <li class="choose-item">
-                    <button class="choose-btn">
-                        Маркетинг
-                    </button>
-                </li>
-            </ul>
-            <ul class="main-list">
-                <li class="main-item">
-                    <img class="main-img" src="./img/img1.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Технокряк
-                        </h3>
-                        <span class="main-word">
-                            Веб-сайт
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img2.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Постер New Orlean vs Golden Star
-                        </h3>
-                        <span class="main-word">
+            <div class="container">
+                <ul class="choose-list">
+                    <li class="choose-item">
+                        <button class="choose-btn">
+                            Усі
+                        </button>
+                    </li>
+                    <li class="choose-item">
+                        <button class="choose-btn">
+                            Веб-сайти
+                        </button>
+                    </li>
+                    <li class="choose-item">
+                        <button class="choose-btn">
+                            Додатки
+                        </button>
+                    </li>
+                    <li class="choose-item">
+                        <button class="choose-btn">
                             Дизайн
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img3.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Ресторан Seafood
-                        </h3>
-                        <span class="main-word">
-                            Додаток
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img4.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Проєкт Prime
-                        </h3>
-                        <span class="main-word">
-                            Маркетинг 
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img5.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Проєкт Boxes
-                        </h3>
-                        <span class="main-word">
-                            Додаток
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img6.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Inspiration has no Borders
-                        </h3>
-                        <span class="main-word">
-                            Веб-сайт 
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img7.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Видання Limited Edition
-                        </h3>
-                        <span class="main-word">
-                            Дизайн
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img8.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Проєкт LAB
-
-                        </h3>
-                        <span class="main-word">
+                        </button>
+                    </li>
+                    <li class="choose-item">
+                        <button class="choose-btn">
                             Маркетинг
-                        </span>
-                    </div>
-                </li>
-                <li class="main-item">
-                    <img class="main-img" src="./img/img9.png" alt="">
-                    <div class="main-wrap">
-                        <h3 class="main-subtitle">
-                            Growing Business
-                        </h3>
-                        <span class="main-word">
-                            Додаток 
-                        </span>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
+                        </button>
+                    </li>
+                </ul>
+                <ul class="main-list">
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img1.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Технокряк
+                            </h3>
+                            <span class="main-word">
+                                Веб-сайт
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img2.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Постер New Orlean vs Golden Star
+                            </h3>
+                            <span class="main-word">
+                                Дизайн
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img3.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Ресторан Seafood
+                            </h3>
+                            <span class="main-word">
+                                Додаток
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img4.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Проєкт Prime
+                            </h3>
+                            <span class="main-word">
+                                Маркетинг
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img5.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Проєкт Boxes
+                            </h3>
+                            <span class="main-word">
+                                Додаток
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img6.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Inspiration has no Borders
+                            </h3>
+                            <span class="main-word">
+                                Веб-сайт
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img7.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Видання Limited Edition
+                            </h3>
+                            <span class="main-word">
+                                Дизайн
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img8.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Проєкт LAB
+
+                            </h3>
+                            <span class="main-word">
+                                Маркетинг
+                            </span>
+                        </div>
+                    </li>
+                    <li class="main-item">
+                        <img class="main-img" src="./img/img9.png" alt="">
+                        <div class="main-wrap">
+                            <h3 class="main-subtitle">
+                                Growing Business
+                            </h3>
+                            <span class="main-word">
+                                Додаток
+                            </span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="foooter">
-        <div class="container">
-            <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
-            </a>
-            <ul class="footer-list">
-                <li class="footer-item">
-                    <a class="footer-addres" href="">
-                        м. Київ, пр-т Лесі Українки, 26
-                    </a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-link" href="mailto:info@devstudio.com">
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li class="footer-item">
-                    <a class="footer-link" href="tel:+380961111111">
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
+        <div class="container footer-box">
+            <div class="footer-address-wrap">
+                <a class="footer-logo" href="">Web<span class="footer-span">Studio</span>
+                </a>
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a class="footer-addres" href="">
+                            м. Київ, пр-т Лесі Українки, 26
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="mailto:info@devstudio.com">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="tel:+380961111111">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-wrap">
+                <h2 class="footer-title">
+                    приєднуйтесь
+                </h2>
+                <ul class="footer-wrap-list">
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-wrap-item">
+                        <a href="#" class="footer-wrap-link">
+                            <svg class="footer-wrap-icon">
+                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-form">
+                <form class="form">
+                    <h2 class="footer-form-title">
+                        Підпишіться на розсилку
+                    </h2>
+                    <label class="footer-form-label" for="">
+                        <input class="footer-form-input" type="email" placeholder="E-mail">
+                    </label>
+                    <button class="footer-form-btn">
+                        Підписатися
+                        <svg class="footer-form-icon">
+                            <use href="./img/symbol-defs.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
-
 </html>
