--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                 </a>
             </div>
     </header>
+    <div class="backdrop is hidden">
+        <div class="modal">
+            <button class="modal-btn">
+                X
+            </button>
+        </div>
+    </div>
     <main>
         <section class="presentation">
             <div class="container">
