--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,7 @@
                 </a>
             </div>
     </header>
+
     <main>
         <section class="choose">
             <div class="container">
@@ -265,6 +266,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
