--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </nav>
             <div class="nav-wrap">
-                <a class="wrap-link" href="mailto:info@devstudio.com" data-modal-open>
+                <a class="wrap-link" href="mailto:info@devstudio.com">
                     <svg class="nav-icon mail">
                         <use href="./img/symbol-defs.svg#icon-e-mail"></use>
                     </svg>
@@ -68,7 +68,7 @@
                     Ефективні рішення для <br> вашого бізнесу
                 </h1>
                 <div class="presentation-wrap">
-                    <button class="presentation-button">
+                    <button class="presentation-button" data-modal-open>
                         Замовити послугу
                     </button>
                 </div>
